; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_ddt_zap.c_ddt_zap_create.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_ddt_zap.c_ddt_zap_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZAP_FLAG_HASH64 = common dso_local global i32 0, align 4
@ZAP_FLAG_UINT64_KEY = common dso_local global i32 0, align 4
@ZAP_FLAG_PRE_HASHED_KEY = common dso_local global i32 0, align 4
@DMU_OT_DDT_ZAP = common dso_local global i32 0, align 4
@ddt_zap_leaf_blockshift = common dso_local global i32 0, align 4
@ddt_zap_indirect_blockshift = common dso_local global i32 0, align 4
@DMU_OT_NONE = common dso_local global i32 0, align 4
@ENOTSUP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64*, i32*, i64)* @ddt_zap_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ddt_zap_create(i32* %0, i64* %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i64* %1, i64** %6, align 8
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  %10 = load i32, i32* @ZAP_FLAG_HASH64, align 4
  %11 = load i32, i32* @ZAP_FLAG_UINT64_KEY, align 4
  %12 = or i32 %10, %11
  store i32 %12, i32* %9, align 4
  %13 = load i64, i64* %8, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %4
  %16 = load i32, i32* @ZAP_FLAG_PRE_HASHED_KEY, align 4
  %17 = load i32, i32* %9, align 4
  %18 = or i32 %17, %16
  store i32 %18, i32* %9, align 4
  br label %19

19:                                               ; preds = %15, %4
  %20 = load i32*, i32** %5, align 8
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* @DMU_OT_DDT_ZAP, align 4
  %23 = load i32, i32* @ddt_zap_leaf_blockshift, align 4
  %24 = load i32, i32* @ddt_zap_indirect_blockshift, align 4
  %25 = load i32, i32* @DMU_OT_NONE, align 4
  %26 = load i32*, i32** %7, align 8
  %27 = call i64 @zap_create_flags(i32* %20, i32 0, i32 %21, i32 %22, i32 %23, i32 %24, i32 %25, i32 0, i32* %26)
  %28 = load i64*, i64** %6, align 8
  store i64 %27, i64* %28, align 8
  %29 = load i64*, i64** %6, align 8
  %30 = load i64, i64* %29, align 8
  %31 = icmp eq i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %19
  %33 = load i32, i32* @ENOTSUP, align 4
  br label %35

34:                                               ; preds = %19
  br label %35

35:                                               ; preds = %34, %32
  %36 = phi i32 [ %33, %32 ], [ 0, %34 ]
  ret i32 %36
}

declare dso_local i64 @zap_create_flags(i32*, i32, i32, i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
